project_ws/log/build_2025-09-08_13-24-13/telerobot_controller/stderr.log
  File "/media/ros/fedora/home/maylis/Dokumente/TeleNav/project_ws/install/telerobot_controller/lib/python3.10/site-packages/telerobot_controller/interface.py", line 6
    from telerobot_interfaces.ms
                                ^
SyntaxError: invalid syntax

